@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9,00"
-	Name="16.Quake3MapShader_vc9"
-	ProjectGUID="{EB3B38EA-5CE7-4983-845B-880661E69D09}"
-	RootNamespace="16.Quake3MapShader_vc9"
+	Name="GUI Editor_v9"
+	ProjectGUID="{853A396E-C031-4C26-A716-5B4E176BE11D}"
+	RootNamespace="GUI Editor"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="131072"
 	>
@@ -42,8 +42,10 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
+				FavorSizeOrSpeed="0"
+				WholeProgramOptimization="false"
 				AdditionalIncludeDirectories="..\..\include"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -62,11 +64,12 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="..\..\bin\Win32-VisualStudio\16.Quake3MapShader.exe"
+				AdditionalOptions=" kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib glu32.lib opengl32.lib "
+				OutputFile="../../bin/Win32-visualstudio/GUIEditor.exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="..\..\lib\Win32-visualstudio"
+				AdditionalLibraryDirectories="&quot;..\..\lib\Win32-visualstudio&quot;"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile="$(OutDir)/Quake3MapShader.pdb"
+				ProgramDatabaseFile="$(OutDir)/TestProject.pdb"
 				SubSystem="1"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
@@ -119,16 +122,15 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				EnableIntrinsicFunctions="true"
-				FavorSizeOrSpeed="1"
+				Optimization="3"
+				WholeProgramOptimization="true"
 				AdditionalIncludeDirectories="..\..\include"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="0"
-				BufferSecurityCheck="false"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
-				DebugInformationFormat="0"
-				CallingConvention="1"
+				Detect64BitPortabilityProblems="true"
+				DebugInformationFormat="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -141,10 +143,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="..\..\bin\Win32-VisualStudio\16.Quake3MapShader.exe"
+				OutputFile="../../bin/Win32-visualstudio/GUIEditor.exe"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="..\..\lib\Win32-visualstudio"
-				GenerateDebugInformation="false"
+				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
@@ -178,6 +179,110 @@
 	<References>
 	</References>
 	<Files>
+		<Filter
+			Name="gui"
+			>
+			<File
+				RelativePath=".\CGUIEditFactory.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\CGUIEditFactory.h"
+				>
+			</File>
+			<File
+				RelativePath=".\CGUIEditWindow.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\CGUIEditWindow.h"
+				>
+			</File>
+			<File
+				RelativePath=".\CGUIEditWorkspace.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\CGUIEditWorkspace.h"
+				>
+			</File>
+			<File
+				RelativePath=".\CGUITextureCacheBrowser.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\CGUITextureCacheBrowser.h"
+				>
+			</File>
+			<Filter
+				Name="GUIAttributes"
+				>
+				<File
+					RelativePath=".\CGUIAttribute.h"
+					>
+				</File>
+				<File
+					RelativePath=".\CGUIAttributeEditor.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\CGUIAttributeEditor.h"
+					>
+				</File>
+				<File
+					RelativePath=".\CGUIBoolAttribute.h"
+					>
+				</File>
+				<File
+					RelativePath=".\CGUIColorAttribute.h"
+					>
+				</File>
+				<File
+					RelativePath=".\CGUIEnumAttribute.h"
+					>
+				</File>
+				<File
+					RelativePath=".\CGUIStringAttribute.h"
+					>
+				</File>
+				<File
+					RelativePath=".\CGUITextureAttribute.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="Useful GUI Elements"
+				>
+				<File
+					RelativePath=".\CGUIPanel.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\CGUIPanel.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="Element Editors"
+				>
+				<File
+					RelativePath=".\CGUIDummyEditorStub.h"
+					>
+				</File>
+			</Filter>
+		</Filter>
+		<Filter
+			Name="io"
+			>
+			<File
+				RelativePath=".\CMemoryReadWriteFile.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\CMemoryReadWriteFile.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath=".\main.cpp"
 			>
